--- a/CapaVista/Properties/Resources.resx
+++ b/CapaVista/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="Signomenos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Signomenos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SIGNO_REFRESCAR" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SIGNO REFRESCAR.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
